File repository input remove icons alignment. Fixes #499

--- a/Ip/Internal/Admin/assets/adminGlobal.less
+++ b/Ip/Internal/Admin/assets/adminGlobal.less
@@ -3,3 +3,7 @@
     margin: 0;
     padding: 0;
 }
+
+.type-repositoryFile  ._file {
+    clear: both;
+}
