--- a/Ip/Internal/Core/assets/admin/admin.css
+++ b/Ip/Internal/Core/assets/admin/admin.css
@@ -9997,6 +9997,9 @@
   margin: 0;
   padding: 0;
 }
+.type-repositoryFile ._file {
+  clear: both;
+}
 .ipHasAdminPanel .ipWidget {
   min-height: 22px;
 }
